--- a/apps/dashboard-harbor-registry/values.yaml
+++ b/apps/dashboard-harbor-registry/values.yaml
@@ -46,14 +46,22 @@ harbor:
       annotations:
         # note different ingress controllers may require a different ssl-redirect annotation
         # for Envoy, use ingress.kubernetes.io/force-ssl-redirect: "true" and remove the nginx lines below
-        kubernetes.io/ingress.class: "nginx"
-        cert-manager.io/cluster-issuer: dashboard-issuer
+        ingress.kubernetes.io/ssl-redirect: "true"
+        ingress.kubernetes.io/proxy-body-size: "0"
+        nginx.ingress.kubernetes.io/ssl-redirect: "true"
+        nginx.ingress.kubernetes.io/proxy-body-size: "0"
       notary:
         # notary-specific annotations
-        annotations: { }
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
+          cert-manager.io/cluster-issuer: dashboard-issuer
+
       harbor:
         # harbor ingress-specific annotations
-        annotations: { }
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
+          cert-manager.io/cluster-issuer: dashboard-issuer
+
     clusterIP:
       # The name of ClusterIP service
       name: harbor
