--- a/apps/dashboard-harbor-registry/values.yaml
+++ b/apps/dashboard-harbor-registry/values.yaml
@@ -48,6 +48,7 @@ harbor:
         # for Envoy, use ingress.kubernetes.io/force-ssl-redirect: "true" and remove the nginx lines below
         kubernetes.io/ingress.class: nginx
         nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+        nginx.ingress.kubernetes.io/ssl-passthrough: "true"
         cert-manager.io/cluster-issuer: dashboard-issuer
       notary:
         # notary-specific annotations
