--- a/infrastructure/dashboard-ingress-nginx/templates/argocdingress.yaml
+++ b/infrastructure/dashboard-ingress-nginx/templates/argocdingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1
 kind: Ingress
 metadata:
   name: argocd-server-ingress
@@ -7,11 +7,15 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    cert-manager.io/cluster-issuer: dashboard-issuer
 spec:
   rules:
-    - host: argocd.dashboard
-      http:
+    - http:
         paths:
-          - backend:
-              serviceName: argocd-server
-              servicePort: https
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 80
